--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -38,17 +38,22 @@
     <div class="footer">
         <div class="copyright">&copy; Rohan Kaitake || 2025</div>
         <div class="social_logo">
-            <div class="social1 social"><a target="_blank" href="https://github.com/AnurupaK"
+            <div class="social1 social"><a target="_blank" href="https://github.com/rohu1208"
                     aria-label="GitHub profile">
                     <i class="fab fa-github"></i> Github
                 </a></div>
-            <div class="social2 social"><a target="_blank"
-                    href="https://www.linkedin.com/in/anurupa-karmakar-a1b82a174/" aria-label="LinkedIn profile">
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a></div>
-            <div class="social3 social"><a target="_blank" href="https://x.com/Anurupa_K" aria-label="Twitter profile">
-                    <i class="fab fa-twitter"></i> Twitter
-                </a></div>
+            <div class="social2 social">
+    <a target="_blank" href="https://www.linkedin.com/in/rohan-kaitake/" aria-label="LinkedIn profile">
+        <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+</div>
+
+            <div class="social3 social">
+    <a target="_blank" href="https://instagram.com/i_a.m_rohan" aria-label="Instagram profile">
+        <i class="fab fa-instagram"></i> Instagram
+    </a>
+</div>
+
         </div>
     </div>
 
