--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -23,8 +23,8 @@
     <div class="header">
         <div class="logo">🕮 EXAM SIMULATOR</div>
         <div class="section">
-            <div class="nav1  nav">🔭 Student Area</div>
-            <div class="nav2  nav">🎲 Application</div>
+            <div class="nav1  nav">🔭 Scholar Space</div>
+            <div class="nav2  nav">🎲 Mock-Mate</div>
         </div>
     </div>
 
