--- a/Frontend/templates/student.html
+++ b/Frontend/templates/student.html
@@ -1,5 +1,5 @@
 <div class="left_student student">
-    <div class="story_nav">STUDENT STORIES 🍃</div>
+    <div class="story_nav">Success Chronicles 🍃</div>
     <div class="stories" id="stories-container">
 
        <!--Review1-->
