--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -14,14 +14,14 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css"> 
-    <title>Exam Simulator</title>
+    <title>Exam Generator</title>
 </head>
 
 <body>
 
     <!--The header and navbar section-->
     <div class="header">
-        <div class="logo">🕮 EXAM SIMULATOR</div>
+        <div class="logo">🕮 EXAM GENERATOR</div>
         <div class="section">
             <div class="nav1  nav">🔭 Scholar Space</div>
             <div class="nav2  nav">🎲 Mock-Mate</div>
